# PyTSML

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DTW_KNN.md  LDMLT.md
src/PyTSML/: PyTSML.py
